--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,28 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png">
+  <link rel="icon" type="image/png" href="assets/icon/ups.png">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!-- icons for ios pwa -->
-  <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
+  <link rel="apple-touch-icon" href="assets/icons/ups.png">
 
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
   <style>
     .leaflet-tooltip-pane .text {
-      color: lawngreen;
+      color: #F59F16;
       font-weight: bold;
       background: transparent;
       border: 0;
       box-shadow: none;
-      font-size: 2em;
+      font-size: 1.5em;
+    }
+    .toolbar-title {
+      text-overflow: inherit;
+      white-space: normal;
     }
   </style>
 </head>
